--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "less-loader",
+  "name": "crocojs-less-loader",
   "version": "2.2.4",
   "author": "Tobias Koppers @sokra",
   "description": "less loader module for webpack",
